--- a/theatrebookings/templates/home.html
+++ b/theatrebookings/templates/home.html
@@ -4,7 +4,10 @@
 {% endblock %}
 
 {% block body %}
-{% for m in message%}
-<h1>{{  m  }}</h1>
-{% endfor %}
+<h1>Home</h1>
+<ol>
+    <li>search bar</li>
+    <li>top films</li>
+    <li>reservations</li>
+  </ol>
 {% endblock %}
