--- a/theatrebookings/templates/base.html
+++ b/theatrebookings/templates/base.html
@@ -27,6 +27,15 @@
             <li class="nav-item">
               <a class="nav-link" href="/profile">Profile</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login">Logout</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/register">Register</a>
+            </li>
           </ul>
         </div>
     </nav>
