--- a/theatrebookings/templates/home.html
+++ b/theatrebookings/templates/home.html
@@ -10,4 +10,41 @@
     <li>top films</li>
     <li>reservations</li>
   </ol>
+  <table style="width: 90%; height: 500px; border: 1px solid;">
+    <!-- number of rows -->
+    {% for i in range(13)%}
+    <tr> 
+      {% if seat_letters[i] != "--" %}
+      <th style= "border: 1px solid;">
+        {{ seat_letters[i] }}
+      </th>
+      {% else %}
+      <th>
+        {{  seat_letters[i]  }}
+      </th>
+      {% endif %}
+
+      <!--Number of collums-->
+        {%for j in range(1, 19)%}
+          {% if i in [6,11]%}
+            <th>
+              --
+            </th>
+          {% elif i in [5,12] and j in [5,6,7,12,13,14]%}
+            <th>
+              --
+            </th>
+          {% elif j in [3,4,15,16]%}
+            <th>
+              --
+            </th>
+          {% else %}
+            <th style= "border: 1px solid;">
+              {{j}}
+            </th>
+          {% endif %}
+        {% endfor%}
+    </tr>
+    {% endfor %}
+</table>
 {% endblock %}
