--- a/theatrebookings/templates/login.html
+++ b/theatrebookings/templates/login.html
@@ -1,12 +1,27 @@
-<form>
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text" class="form-control" id="name" placeholder="Your name">
-    </div>
-    <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+{% extends 'base.html' %}
+{% block head %}
+<title>Login</title>
+{% endblock %}
+
+{% block body %}
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Login to start booking</h5>
+    <form>
+      <div class="form-group row">
+        <label for="name" class="col-sm-2 col-form-label">Name</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="name" placeholder="Your name">
+        </div>
       </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
+      <div class="form-group row">
+          <label for="exampleInputEmail1" class="col-sm-2 col-form-label">Email address</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          </div>
+        </div>
+      <button type="submit" style="width: 100%;" class="btn btn-primary">Login</button>
+    </form>
+  </div>
+</div>
+{% endblock %}
