unfinished color of seats

--- a/theatrebookings/templates/home.html
+++ b/theatrebookings/templates/home.html
@@ -10,16 +10,17 @@
     <li>top films</li>
     <li>reservations</li>
   </ol>
-  <table style="width: 90%; height: 500px; border: 1px solid;">
+  <table style="width: 90%;text-align: center;; height: 500px; border: 1px solid;border-color: white;">
+    
     <!-- number of rows -->
     {% for i in range(13)%}
     <tr> 
       {% if seat_letters[i] != "--" %}
-      <th style= "border: 1px solid;">
+      <th style= "border: 1px solid;text-align: center;background-color: black; color: white; border-color: black;">
         {{ seat_letters[i] }}
       </th>
       {% else %}
-      <th>
+      <th style="color:white">
         {{  seat_letters[i]  }}
       </th>
       {% endif %}
@@ -27,19 +28,23 @@
       <!--Number of collums-->
         {%for j in range(1, 19)%}
           {% if i in [6,11]%}
-            <th>
+            <th style="color:white">
               --
             </th>
           {% elif i in [5,12] and j in [5,6,7,12,13,14]%}
-            <th>
+            <th style="color:white">
               --
             </th>
           {% elif j in [3,4,15,16]%}
-            <th>
+            <th style="color:white">
               --
             </th>
+          {% elif i in [5,12] and j in [8,9,10,11]%}
+            <th style = "border: 1px solid; background-color: gold;border-color: white;">
+              {{j}}
+            </th>
           {% else %}
-            <th style= "border: 1px solid;">
+            <th style= "border: 1px solid;border-color: white ;color: white; background-color: lightslategrey;">
               {{j}}
             </th>
           {% endif %}
