added links to seats

--- a/theatrebookings/templates/home.html
+++ b/theatrebookings/templates/home.html
@@ -16,7 +16,7 @@
     {% for i in range(13)%}
     <tr> 
       {% if seat_letters[i] != "--" %}
-      <th style= "border: 1px solid;text-align: center;background-color: black; color: white; border-color: black;">
+      <th style= "border: 1px solid;text-align: center;width: 3%; background-color: black; color: white; border-color: black;">
         {{ seat_letters[i] }}
       </th>
       {% else %}
@@ -41,13 +41,13 @@
             </th>
           {% elif seats[0].vip %}
            
-            <th style = "border: 1px solid; background-color: gold;border-color: white;">
-              {{ seats.pop(0).position }}
+            <th style = "border: 1px solid; width: 5%; background-color: gold;border-color: white;">
+              <a href="/reserve/{{seats[0].id}}" style="text-decoration:none;color: black;">{{ seats.pop(0).position }} </a>
             </th>
            
           {% else %}
-            <th style= "border: 1px solid;border-color: white ;color: white; background-color: lightslategrey;">
-              {{ seats.pop(0).position }}
+            <th style= "border: 1px solid; width:5%; border-color: white ;color: white; background-color: lightslategrey;">
+              <a href="/reserve/{{seats[0].id}}" style="text-decoration:none;color: white;">{{ seats.pop(0).position }}</a>
             </th>
           {% endif %}
         {% endfor%}
