--- a/theatrebookings/templates/base.html
+++ b/theatrebookings/templates/base.html
@@ -19,16 +19,16 @@
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/reservations">Reservations</a>
+              <a class="nav-link" href="shows/add">Add show</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/shows">Shows</a>
-              </li>
             <li class="nav-item">
               <a class="nav-link" href="/profile">Profile</a>
             </li>
+            
+          </ul>
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
+              <a class="nav-link" href="/login">Login</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/login">Logout</a>
@@ -37,6 +37,7 @@
                 <a class="nav-link" href="/register">Register</a>
             </li>
           </ul>
+          
         </div>
     </nav>
     {% block head %}{% endblock %}
