--- a/theatrebookings/templates/add_show.html
+++ b/theatrebookings/templates/add_show.html
@@ -7,17 +7,17 @@
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">Add a new show</h5>
-    <form>
+    <form action="/shows/add" method="post">
       <div class="form-group row">
         <label for="title" class="col-sm-2 col-form-label">Title</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="title" placeholder="Title of the show">
+          <input type="text" class="form-control" id="title" name="name" placeholder="Title of the show">
         </div>
       </div>
       <div class="form-group row">
         <label for="description" class="col-sm-2 col-form-label">Description</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="description" placeholder="Describe the show">
+          <input type="text" class="form-control" name="description"  placeholder="Describe the show">
         </div>
       </div>
       <button type="submit" style="width: 100%;" class="btn btn-primary">Add show</button>
