--- a/theatrebookings/templates/create_reservation.html
+++ b/theatrebookings/templates/create_reservation.html
@@ -4,9 +4,18 @@
 {% endblock %}
 
 {% block body %}
-<h1>Make Reservations</h1>
-<ol>
-    <li>search show</li>
-    <li>check schedule</li>
-  </ol>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">Make Reservation</h5>
+    <p>
+      <b>Show: </b>{{ show.name }}<br>
+      <b>Seat: </b>{{ seat.position }}<br>
+      <b>Date: </b>{{ show.date }}<br>
+      <b>Time: </b>{{ show.time }}
+    </p>
+    <form action="/reserve/{{ show.id }}/{{ seat.id }}" method="post">
+      <button type="submit" style="width: 100%;" class="btn btn-primary">Confirm reservation</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
