--- a/theatrebookings/templates/show_details.html
+++ b/theatrebookings/templates/show_details.html
@@ -10,4 +10,11 @@
     <li>Show details</li>
     <li>Show seats</li>
   </ol>
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">{{show.name}}</h5>
+      <p class="card-description">{{show.description}}</p>
+      <a href="#" class="btn btn-primary">Reserve</a>
+    </div>
+  </div>
 {% endblock %}
