--- a/theatrebookings/templates/base.html
+++ b/theatrebookings/templates/base.html
@@ -27,15 +27,20 @@
             
           </ul>
           <ul class="navbar-nav ml-auto">
+            {% if user %}
+            <li class="nav-item">
+              <a class="nav-link" href="/logout">Logout</a>
+            </li>
+            {% else %}
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/login">Logout</a>
+              <a class="nav-link" href="/register">Register</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/register">Register</a>
-            </li>
+            {% endif %}
+            
+            
           </ul>
           
         </div>
