--- a/theatrebookings/templates/register.html
+++ b/theatrebookings/templates/register.html
@@ -8,17 +8,17 @@
 <div class="card" >
   <div class="card-body">
     <h5 class="card-title">Register to start booking</h5>
-    <form>
+    <form action="/register" method="post">
       <div class="form-group row">
         <label for="name" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="name" placeholder="Your name">
+          <input type="text" class="form-control" id="name" name="name" placeholder="Your name">
         </div>
       </div>
       <div class="form-group row">
           <label for="exampleInputEmail1" class="col-sm-2 col-form-label">Email address</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" class="form-control" name="email" id="exampleInputEmail1"  aria-describedby="emailHelp" placeholder="Enter email">
           </div>
         </div>
       <button type="submit" style="width: 100%;" class="btn btn-primary">Register</button>
