Pass user to every view

--- a/theatrebookings/templates/base.html
+++ b/theatrebookings/templates/base.html
@@ -27,9 +27,9 @@
             
           </ul>
           <ul class="navbar-nav ml-auto">
-            {% if user %}
+            {% if user!= None %}
             <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
+              <a class="nav-link" href="/logout">Logout {{ user.name }}</a>
             </li>
             {% else %}
             <li class="nav-item">
