--- a/theatrebookings/templates/add_show.html
+++ b/theatrebookings/templates/add_show.html
@@ -21,6 +21,12 @@
         </div>
       </div>
       <div class="form-group row">
+        <label for="description" class="col-sm-2 col-form-label">Image</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" name="img"  placeholder="Link to the image">
+        </div>
+      </div>
+      <div class="form-group row">
         <label for="description" class="col-sm-2 col-form-label">Genre</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" name="genre"  placeholder="Type of show">
