--- a/theatrebookings/templates/show_details.html
+++ b/theatrebookings/templates/show_details.html
@@ -54,18 +54,18 @@
           {% elif seats[0].id in reserved_seats_ids %}
 
             <th style = "border: 1px solid; width: 5%; background-color: red;border-color: white;">
-              <a href="/reserve/{{seats[0].id}}" style="text-decoration:none;color: black;">{{ seats.pop(0).position }} </a>
+              <a href="/reserve/{{show.id}}/{{seats[0].id}}" style="text-decoration:none;color: black;">{{ seats.pop(0).position }} </a>
             </th>
 
           {% elif seats[0].vip %}
            
             <th style = "border: 1px solid; width: 5%; background-color: gold;border-color: white;">
-              <a href="/reserve/{{seats[0].id}}" style="text-decoration:none;color: black;">{{ seats.pop(0).position }} </a>
+              <a href="/reserve/{{show.id}}/{{seats[0].id}}" style="text-decoration:none;color: black;">{{ seats.pop(0).position }} </a>
             </th>
            
           {% else %}
             <th style= "border: 1px solid; width:5%; border-color: white ;color: white; background-color: lightslategrey;">
-              <a href="/reserve/{{seats[0].id}}" style="text-decoration:none;color: white;">{{ seats.pop(0).position }}</a>
+              <a href="/reserve/{{show.id}}/{{seats[0].id}}" style="text-decoration:none;color: white;">{{ seats.pop(0).position }}</a>
             </th>
           {% endif %}
         {% endfor%}
