Create reservations page and view

--- a/theatrebookings/templates/base.html
+++ b/theatrebookings/templates/base.html
@@ -22,7 +22,7 @@
               <a class="nav-link" href="shows/add">Add show</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/profile">Profile</a>
+              <a class="nav-link" href="/reservations">Reservations</a>
             </li>
             
           </ul>
