--- a/theatrebookings/templates/login.html
+++ b/theatrebookings/templates/login.html
@@ -4,6 +4,11 @@
 {% endblock %}
 
 {% block body %}
+{% if message %}
+<div class="alert alert-danger" role="alert">
+  {{ message }}
+</div>
+{% endif %}
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">Login to start booking</h5>
