--- a/theatrebookings/templates/register.html
+++ b/theatrebookings/templates/register.html
@@ -21,6 +21,14 @@
             <input type="email" class="form-control" name="email" id="exampleInputEmail1"  aria-describedby="emailHelp" placeholder="Enter email">
           </div>
         </div>
+
+        <div class="form-group row">
+          <label for="exampleInputEmail1" class="col-sm-2 col-form-label">Email address</label>
+          <div class="col-sm-10">
+            <input type="number" minlength="19" maxlength="19" class="form-control" name="email" id="exampleInputEmail1"  aria-describedby="emailHelp" placeholder="Enter email">
+          </div>
+        </div>
+
       <button type="submit" style="width: 100%;" class="btn btn-primary">Register</button>
     </form>
   </div>
