--- a/theatrebookings/templates/base.html
+++ b/theatrebookings/templates/base.html
@@ -24,9 +24,12 @@
             <li class="nav-item">
               <a class="nav-link" href="/reservations">Reservations</a>
             </li>
-            
           </ul>
           <ul class="navbar-nav ml-auto">
+            <form class="form-inline my-2 my-lg-0" action="/search" method="POST">
+              <input class="form-control mr-sm-2" name="search_word"type="search" style="width: 400px;" placeholder="Search for show" aria-label="Search">
+              <button type="submit"class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
             {% if user!= None %}
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout {{ user.name }}</a>
