--- a/theatrebookings/templates/home.html
+++ b/theatrebookings/templates/home.html
@@ -4,12 +4,7 @@
 {% endblock %}
 
 {% block body %}
-<h1>Home</h1>
-<ol>
-    <li>search bar</li>
-    <li>top films</li>
-    <li>reservations</li>
-  </ol>
+
   <div class="row">
   {%for shw in shows%}
     <div class="col">
@@ -22,6 +17,7 @@
               <div class="float-right">
                   <span style="background-color: orange; height: 18px; color: black;"class="badge badge-genre">{{shw.genre}}</span>
                   <span style="background-color: lightskyblue;height: 18px"class="badge badge-duration">{{shw.duration}}h</span>
+                  <!-- <span style="background-color: lightsteelblue"class="badge badge-time">{{shw.date}}</span> -->
               </div>
             </div>
           </div>
