--- a/theatrebookings/templates/register.html
+++ b/theatrebookings/templates/register.html
@@ -23,9 +23,9 @@
         </div>
 
         <div class="form-group row">
-          <label for="exampleInputEmail1" class="col-sm-2 col-form-label">Email address</label>
+          <label for="exampleInputEmail1" class="col-sm-2 col-form-label">Credit card</label>
           <div class="col-sm-10">
-            <input type="number" minlength="19" maxlength="19" class="form-control" name="email" id="exampleInputEmail1"  aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="number" maxlength="19" class="form-control" name="creditcard" placeholder="Number">
           </div>
         </div>
 
