Changes reservation pages to support screenings

--- a/theatrebookings/templates/add_screening.html
+++ b/theatrebookings/templates/add_screening.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block head %}
-<title>Add show</title>
+<title>Add screening</title>
 {% endblock %}
 
 {% block body %}
@@ -24,4 +24,4 @@
       </form>
     </div>
   </div>
-  {% endblock %}
+{% endblock %}
