--- a/theatrebookings/templates/reservations.html
+++ b/theatrebookings/templates/reservations.html
@@ -5,15 +5,14 @@
 
 {% block body %}
 
-{% for id, show, seat in reservations %}
+{% for id, screening, show, seat in reservation_details %}
 <div class="card">
   <div class="card-body">
     <h5 class="card-title">Reservation</h5>
     <p>
       <b>Show: </b>{{ show.name }}<br>
       <b>Seat: </b>{{ seat.position }}<br>
-      <b>Date: </b>{{ show.date }}<br>
-      <b>Time: </b>{{ show.time }}<br>
+      <b>Date and time: </b>{{ screening.datetime }}<br>
       <b>Name: </b>{{ user.name }}<br>
       <b>Email: </b>{{ user.email }}<br>
     </p>
