--- a/theatrebookings/templates/screening_details.html
+++ b/theatrebookings/templates/screening_details.html
@@ -1,3 +1,28 @@
+{% extends 'base.html' %}
+{% block head %}
+<title>Add screening</title>
+{% endblock %}
+
+{% block body %}
+<div class="card" style="width: 95%;box-shadow: 2px 3px #888888;">
+    <div class="row">
+      <div class="col">
+        <div class="card-body">
+          <h5 class="card-title">Screening of {{show.name}}</h5>
+          <span class="badge badge-success">{{screening.datetime}}</span>
+          <span class="badge badge-warning">{{show.genre}}</span>
+          <span class="badge badge-primary">{{show.duration}}h</span>
+        </div>
+        <p class="card-description" style="width: 95%;">{{show.description}}</p>
+      </div>
+      <div class="col">
+        <img src={{show.img_link}} class="card-img-top" alt="..."  width="500" height="500">
+      </div>
+      </div>
+</div>
+
+<br>
+
 <table style="width: 90%;text-align: center;; height: 500px; border: 1px solid;border-color: white;">
     
     <!-- number of rows -->
@@ -27,7 +52,7 @@
             <th style="color:white">
               --
             </th>
-          {% elif seats[0].id in reserved_seats_ids %}
+          {% elif seats[0].id in reserved_seat_ids %}
 
             <th style = "border: 1px solid; width: 5%; background-color: red;border-color: white;">
               <a style="text-decoration:none;color: black;">{{ seats.pop(0).position }} </a>
@@ -36,15 +61,17 @@
           {% elif seats[0].vip %}
            
             <th style = "border: 1px solid; width: 5%; background-color: gold;border-color: white;">
-              <a href="/reservations/{{show.id}}/{{seats[0].id}}" style="text-decoration:none;color: black;">{{ seats.pop(0).position }} </a>
+              <a href="/reservations/{{screening.id}}/{{seats[0].id}}" style="text-decoration:none;color: black;">{{ seats.pop(0).position }} </a>
             </th>
            
           {% else %}
             <th style= "border: 1px solid; width:5%; border-color: white ;color: white; background-color: lightslategrey;">
-              <a href="/reservations/{{show.id}}/{{seats[0].id}}" style="text-decoration:none;color: white;">{{ seats.pop(0).position }}</a>
+              <a href="/reservations/{{screening.id}}/{{seats[0].id}}" style="text-decoration:none;color: white;">{{ seats.pop(0).position }}</a>
             </th>
           {% endif %}
         {% endfor%}
     </tr>
     {% endfor %}
 </table>
+
+{% endblock %}
