--- a/theatrebookings/templates/add_screening.html
+++ b/theatrebookings/templates/add_screening.html
@@ -9,13 +9,13 @@
       <h5 class="card-title">Add screening for {{show.name}}</h5>
       <form action="/shows/screenigs/add/{{ show.id }}" method="post">
         <div class="form-group row">
-          <label for="description" class="col-sm-2 col-form-label">Date</label>
+          <label class="col-sm-2 col-form-label">Date</label>
           <div class="col-sm-10">
             <input type="date" class="form-control" name="date"  placeholder="Days of presentation">
           </div>
         </div>
         <div class="form-group row">
-          <label for="description" class="col-sm-2 col-form-label">Starting Time</label>
+          <label class="col-sm-2 col-form-label">Starting Time</label>
           <div class="col-sm-10">
             <input type="time" class="form-control" name="time"  placeholder="When the show starts">
           </div>
