--- a/theatrebookings/templates/add_show.html
+++ b/theatrebookings/templates/add_show.html
@@ -9,43 +9,43 @@
     <h5 class="card-title">Add a new show</h5>
     <form action="/shows/add" method="post">
       <div class="form-group row">
-        <label for="title" class="col-sm-2 col-form-label">Title</label>
+        <label class="col-sm-2 col-form-label">Title</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" id="title" name="name" placeholder="Title of the show">
+          <input type="text" class="form-control" name="name" placeholder="Title of the show">
         </div>
       </div>
       <div class="form-group row">
-        <label for="description" class="col-sm-2 col-form-label">Description</label>
+        <label class="col-sm-2 col-form-label">Description</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" name="description"  placeholder="Describe the show">
         </div>
       </div>
       <div class="form-group row">
-        <label for="description" class="col-sm-2 col-form-label">Image</label>
+        <label class="col-sm-2 col-form-label">Image</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" name="img"  placeholder="Link to the image">
         </div>
       </div>
       <div class="form-group row">
-        <label for="description" class="col-sm-2 col-form-label">Genre</label>
+        <label class="col-sm-2 col-form-label">Genre</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" name="genre"  placeholder="Type of show">
         </div>
       </div>
       <div class="form-group row">
-        <label for="description" class="col-sm-2 col-form-label">Date</label>
+        <label class="col-sm-2 col-form-label">Date</label>
         <div class="col-sm-10">
           <input type="date" class="form-control" name="date"  placeholder="Days of presentation">
         </div>
       </div>
       <div class="form-group row">
-        <label for="description" class="col-sm-2 col-form-label">Starting Time</label>
+        <label class="col-sm-2 col-form-label">Starting Time</label>
         <div class="col-sm-10">
           <input type="time" class="form-control" name="time"  placeholder="When the show starts">
         </div>
       </div>
       <div class="form-group row">
-        <label for="description" class="col-sm-2 col-form-label">Duration</label>
+        <label class="col-sm-2 col-form-label">Duration</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" name="duration"  placeholder="How long is the show">
         </div>
