--- a/theatrebookings/templates/login.html
+++ b/theatrebookings/templates/login.html
@@ -11,18 +11,18 @@
 {% endif %}
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title">Login to start booking</h5>
+    <h5 class="card-title">Login</h5>
     <form action="/login" method="post">
       <div class="form-group row">
-        <label for="name" class="col-sm-2 col-form-label">Name</label>
+        <label class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" name="name" id="name" placeholder="Your name">
         </div>
       </div>
       <div class="form-group row">
-          <label for="exampleInputEmail1" class="col-sm-2 col-form-label">Email address</label>
+          <label class="col-sm-2 col-form-label">Email address</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" class="form-control" name="email" placeholder="Enter email">
           </div>
         </div>
       <button type="submit" style="width: 100%;" class="btn btn-primary">Login</button>
