--- a/theatrebookings/templates/reservations.html
+++ b/theatrebookings/templates/reservations.html
@@ -4,6 +4,11 @@
 {% endblock %}
 
 {% block body %}
+{% if reservation_details == []%}
+  <div class="alert alert-warning" role="alert">
+    No reservations made yet
+  </div>
+{% endif%}
 
 {% for id, screening, show, seat in reservation_details %}
 <div class="card">
