--- a/theatrebookings/templates/show_details.html
+++ b/theatrebookings/templates/show_details.html
@@ -6,29 +6,29 @@
 {% block body %}
 <div class="card" style="width: 95%;box-shadow: 2px 3px #888888;">
   <div class="row">
-    <div class="col">
-      <div class="card-body">
-        <h5  style= "color: black;"class="card-title">{{show.name}}</h5>
-        <span style="background-color: orange; color: black;"class="badge badge-genre">{{show.genre}}</span>
-        <span style="background-color: lightskyblue"class="badge badge-duration">{{show.duration}}h</span>
-        <div class="description">
-          <p class="card-description" style="width: 95%;">{{show.description}}</p>
-        </div>
+      <div class="col-6">
+        <div class="card-body">
+          <h5 class="card-title">{{show.name}}</h5>
+          <span class="badge badge-warning">{{show.genre}}</span>
+          <span class="badge badge-primary">{{show.duration}}h</span>
+          <p class="card-textp" style="width: 95%;">{{show.description}}</p>
           <a class="btn btn-success" href="/shows/screenigs/add/{{ show.id }}">Add screening</a>
           <a class="btn btn-danger" href="/shows/delete/{{ show.id }}">Delete</a>
+        </div>
+      </div>
+      <div class="col-6">
+        <img src={{show.img_link}} style="border-radius: 5px; width:90%; margin:15px;">
       </div>
     </div>
-    <div class="col">
-      <img src={{show.img_link}} class="card-img-top" alt="..."  width="500" height="500">
-    </div>
-    </div>
 </div>
+
 <br>
 
 <!-- screenings -->
+<p >Show screenings:</p>
 <div class="row">
   {%for screening in screenings%}
-    <div class="col-3">
+    <div class="col-4">
       <div class="card" style="width: 18rem;box-shadow:2px 3px #888888">
         <div class="card-body">
             <h5 class="card-title">{{screening.datetime}}</h5>
@@ -36,10 +36,7 @@
             <span class="badge badge-warning">{{show.genre}}</span>
             <span class="badge badge-primary">{{show.duration}}h</span>
             <br/><br/>
-
-          <div align="center">
-            <a href="/screenings/{{screening.id}}" style="width: 50%;" class="btn btn-primary">View</a>
-          </div>
+            <a href="/screenings/{{screening.id}}" class="btn btn-primary">View</a>
         </div>
       </div>
     </div>
