Fix bad navbar link

--- a/theatrebookings/templates/screening_details.html
+++ b/theatrebookings/templates/screening_details.html
@@ -22,7 +22,7 @@
 </div>
 
 <br>
-
+<p>Click on the available seats to reserve</p>
 <table style="width: 90%;text-align: center;; height: 500px; border: 1px solid;border-color: white;">
     
     <!-- number of rows -->
