--- a/theatrebookings/templates/add_show.html
+++ b/theatrebookings/templates/add_show.html
@@ -33,21 +33,9 @@
         </div>
       </div>
       <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Date</label>
-        <div class="col-sm-10">
-          <input type="date" class="form-control" name="date"  placeholder="Days of presentation">
-        </div>
-      </div>
-      <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Starting Time</label>
-        <div class="col-sm-10">
-          <input type="time" class="form-control" name="time"  placeholder="When the show starts">
-        </div>
-      </div>
-      <div class="form-group row">
         <label class="col-sm-2 col-form-label">Duration</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" name="duration"  placeholder="How long is the show">
+          <input type="number" class="form-control" name="duration"  placeholder="How long is the show">
         </div>
       </div>
       <button type="submit" style="width: 100%;" class="btn btn-primary">Add show</button>
