--- a/theatrebookings/templates/base.html
+++ b/theatrebookings/templates/base.html
@@ -9,7 +9,7 @@
     
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Theater Bookings</a>
+        <a class="navbar-brand" href="/">Theater Bookings</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -19,7 +19,7 @@
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="shows/add">Add show</a>
+              <a class="nav-link" href="/shows/add">Add show</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/reservations">Reservations</a>
@@ -27,7 +27,7 @@
           </ul>
           <ul class="navbar-nav ml-auto">
             <form class="form-inline my-2 my-lg-0" action="/search" method="POST">
-              <input class="form-control mr-sm-2" name="search_word"type="search" style="width: 400px;" placeholder="Search for show" aria-label="Search">
+              <input class="form-control mr-sm-2" name="search_word"type="search" style="width: 400px;" placeholder="Search for a show" aria-label="Search">
               <button type="submit"class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
             </form>
             {% if user!= None %}
