Add editing reservation functionality

--- a/theatrebookings/templates/create_reservation.html
+++ b/theatrebookings/templates/create_reservation.html
@@ -11,7 +11,7 @@
       <b>Show: </b>{{ show.name }}<br>
       <b>Seat: </b>{{ seat.position }}<br>
       <b>Date and time: </b>{{ screening.datetime }}<br>
-      <b>Seat: </b>{{ seat.price }}<br>
+      <b>Price: </b>{{ seat.price }}0$<br>
     </p>
     <form action="/reservations/{{ show.id }}/{{ seat.id }}" method="post">
       <button type="submit" style="width: 100%;" class="btn btn-primary">Confirm reservation</button>
