--- a/theatrebookings/templates/reservations.html
+++ b/theatrebookings/templates/reservations.html
@@ -18,7 +18,7 @@
       <b>Show: </b>{{ show.name }}<br>
       <b>Seat: </b>{{ seat.position }}<br>
       <b>Date and time: </b>{{ screening.datetime }}<br>
-      <b>Price: </b>{{ seat.price }}<br>
+      <b>Price: </b>{{ seat.price }}0$<br>
       <b>Name: </b>{{ user.name }}<br>
       <b>Email: </b>{{ user.email }}<br>
     </p>
