--- a/theatrebookings/templates/screening_details.html
+++ b/theatrebookings/templates/screening_details.html
@@ -23,6 +23,10 @@
 
 <br>
 <p>Click on the available seats to reserve</p>
+<div class="d-flex justify-content-center">
+  <span class="badge rounded-pill bg-secondary" style="color: white;">Normal Seats</span>
+  <span class="badge rounded-pill bg-warning text-dark">VIP Seats</span>
+</div>
 <table style="width: 90%;text-align: center;; height: 500px; border: 1px solid;border-color: white;">
     
     <!-- number of rows -->
@@ -73,5 +77,4 @@
     </tr>
     {% endfor %}
 </table>
-
 {% endblock %}
