--- a/theatrebookings/templates/reservations.html
+++ b/theatrebookings/templates/reservations.html
@@ -12,17 +12,29 @@
 
 {% for id, screening, show, seat in reservation_details %}
 <div class="card">
-  <div class="card-body">
-    <h5 class="card-title">Reservation</h5>
-    <p>
-      <b>Show: </b>{{ show.name }}<br>
-      <b>Seat: </b>{{ seat.position }}<br>
-      <b>Date and time: </b>{{ screening.datetime }}<br>
-      <b>Name: </b>{{ user.name }}<br>
-      <b>Email: </b>{{ user.email }}<br>
-    </p>
-    <a class="btn btn-warning" href="/reservations/edit/{{ id }}">Edit</a>
-    <a class="btn btn-danger" href="/reservations/delete/{{ id }}">Cancel</a>
+  <div class="row">
+    <div class="col-6">
+      <img src={{show.img_link}} style="border-radius: 5px; width:90%; margin:15px;">
+    </div>
+    <div class="col-6">
+      <div class="card-body">
+        <h5 class="card-title">Reservation</h5>
+        <p>
+          <b>Show: </b>{{ show.name }}<br>
+          <b>Seat: </b>{{ seat.position }}<br>
+          {% if seat.vip%}
+          <b>Price: </b>12.00€<br>
+          {% else %}
+          <b>Price: </b>4.00€<br>
+          {% endif %}
+          <b>Date and time: </b>{{ screening.datetime }}<br>
+          <b>Name: </b>{{ user.name }}<br>
+          <b>Email: </b>{{ user.email }}<br>
+        </p>
+        <a class="btn btn-warning" href="/reservations/edit/{{ id }}">Edit</a>
+        <a class="btn btn-danger" href="/reservations/delete/{{ id }}">Cancel</a>
+      </div>
+  </div>
   </div>
 </div>
 {% endfor %}
