Add seat labels

--- a/theatrebookings/templates/edit_reservation.html
+++ b/theatrebookings/templates/edit_reservation.html
@@ -32,7 +32,12 @@
 </div>
 
 <br>
-<p>Seats statuses for this screening:</p>
+<p class="ml-2">Seats statuses for this screening:
+  <span class="badge rounded-pill ml-1 float-right" style="background-color: lightslategray; color: white;">Normal 4.00$</span>
+  <span class="badge rounded-pill ml-1 float-right" style="background-color: gold; color: black;">VIP 12.00$</span>
+  <span class="badge rounded-pill ml-1 float-right" style="background-color: red; color: black;">Reserved Seats</span>
+  <span class="badge rounded-pill ml-1 float-right" style="background-color: greenyellow; color: black;">Current Seat</span>
+</p>
 <table style="width: 90%;text-align: center;; height: 500px; border: 1px solid;border-color: white;">
     
     <!-- number of rows -->
