--- a/theatrebookings/templates/screening_details.html
+++ b/theatrebookings/templates/screening_details.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 <div class="d-flex justify-content-center">
-<div class="card" style="width: 95%;box-shadow: 2px 3px #888888;">
+<div class="card" style="width: 98%;">
     <div class="row">
       <div class="col-6">
         <div class="card-body">
@@ -24,16 +24,12 @@
 </div>
 
 <br>
-<p class="ml-5">Click on the available seats to reserve</p>
-
-<div class="d-flex justify-content-left">
-  <ul class="list-group ml-5">
-    <span class="badge rounded-pill" style="background-color: lightslategray; color: white;">Normal Seats</span>
-    <span class="badge rounded-pill" style="background-color: gold; color: black;">VIP Seats</span>
-    <span class="badge rounded-pill" style="background-color: red; color: black;">Reserved Seats</span>
-  </ul>
-</div>
-<div class="d-flex justify-content-center">
+<p class="ml-2">Click on the available seats to reserve
+<span class="badge rounded-pill ml-1 float-right" style="background-color: lightslategray; color: white;">Normal 4.00$</span>
+<span class="badge rounded-pill ml-1 float-right" style="background-color: gold; color: black;">VIP 12.00$</span>
+<span class="badge rounded-pill ml-1 float-right" style="background-color: red; color: black;">Reserved Seats</span>
+</p>
+<div align="center">
 <table style="width: 90%;text-align: center;; height: 500px; border: 1px solid;border-color: white;">
     
     <!-- number of rows -->
