Change dollar to euro

--- a/theatrebookings/templates/reservations.html
+++ b/theatrebookings/templates/reservations.html
@@ -22,7 +22,7 @@
         <p>
           <b>Show: </b>{{ show.name }}<br>
           <b>Seat: </b>{{ seat.position }}<br>
-          <b>Price: </b>{{ seat.price }}0$<br>
+          <b>Price: </b>{{ seat.price }}0€<br>
           <b>Date and time: </b>{{ screening.datetime }}<br>
           <b>Name: </b>{{ user.name }}<br>
           <b>Email: </b>{{ user.email }}<br>
