--- a/theatrebookings/templates/screening_details.html
+++ b/theatrebookings/templates/screening_details.html
@@ -25,8 +25,8 @@
 
 <br>
 <p class="ml-2">Click on the available seats to reserve
-<span class="badge rounded-pill ml-1 float-right" style="background-color: lightslategray; color: white;">Normal 4.00$</span>
-<span class="badge rounded-pill ml-1 float-right" style="background-color: gold; color: black;">VIP 12.00$</span>
+<span class="badge rounded-pill ml-1 float-right" style="background-color: lightslategray; color: white;">Normal 4.00€</span>
+<span class="badge rounded-pill ml-1 float-right" style="background-color: gold; color: black;">VIP 12.00€</span>
 <span class="badge rounded-pill ml-1 float-right" style="background-color: red; color: black;">Reserved Seats</span>
 </p>
 <div align="center">
