--- a/theatrebookings/templates/edit_reservation.html
+++ b/theatrebookings/templates/edit_reservation.html
@@ -32,9 +32,9 @@
 </div>
 
 <br>
-<p class="ml-2">Seats statuses for this screening:
-  <span class="badge rounded-pill ml-1 float-right" style="background-color: lightslategray; color: white;">Normal 4.00$</span>
-  <span class="badge rounded-pill ml-1 float-right" style="background-color: gold; color: black;">VIP 12.00$</span>
+<p class="ml-2">Seats statuses for this screening
+  <span class="badge rounded-pill ml-1 float-right" style="background-color: lightslategray; color: white;">Normal 4.00€</span>
+  <span class="badge rounded-pill ml-1 float-right" style="background-color: gold; color: black;">VIP 12.00€</span>
   <span class="badge rounded-pill ml-1 float-right" style="background-color: red; color: black;">Reserved Seats</span>
   <span class="badge rounded-pill ml-1 float-right" style="background-color: greenyellow; color: black;">Current Seat</span>
 </p>
