Add sales page and functions

--- a/theatrebookings/templates/show_details.html
+++ b/theatrebookings/templates/show_details.html
@@ -17,7 +17,7 @@
           <span class="badge badge-warning">{{show.genre}}</span>
           <span class="badge badge-primary">{{show.duration}}h</span>
           <p class="card-textp" style="width: 95%;">{{show.description}}</p>
-          <a class="btn btn-success" href="/shows/screenigs/add/{{ show.id }}">Add screening</a>
+          <a class="btn btn-success" href="/screenings/add/{{ show.id }}">Add screening</a>
           <a class="btn btn-danger" href="/shows/delete/{{ show.id }}">Delete</a>
         </div>
       </div>
