--- a/theatrebookings/templates/add_screening.html
+++ b/theatrebookings/templates/add_screening.html
@@ -7,7 +7,7 @@
 <div class="card">
     <div class="card-body">
       <h5 class="card-title">Add screening for {{show.name}}</h5>
-      <form action="/shows/screenigs/add/{{ show.id }}" method="post">
+      <form action="/screenings/add/{{ show.id }}" method="post">
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">Date</label>
           <div class="col-sm-10">
