--- a/theatrebookings/templates/base.html
+++ b/theatrebookings/templates/base.html
@@ -18,11 +18,17 @@
             <li class="nav-item active">
               <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
+            
+            <li class="nav-item">
+              <a class="nav-link" href="/reservations">Reservations</a>
+            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="/shows/add">Add show</a>
             </li>
+
             <li class="nav-item">
-              <a class="nav-link" href="/reservations">Reservations</a>
+              <a class="nav-link" href="/admin/sales">Sales</a>
             </li>
           </ul>
           <ul class="navbar-nav ml-auto">
