--- a/theatrebookings/templates/create_reservation.html
+++ b/theatrebookings/templates/create_reservation.html
@@ -13,7 +13,7 @@
       <b>Date and time: </b>{{ screening.datetime }}<br>
       <b>Price: </b>{{ seat.price }}0€<br>
     </p>
-    <form action="/reservations/{{ show.id }}/{{ seat.id }}" method="post">
+    <form action="/reservations/{{ screening.id }}/{{ seat.id }}" method="post">
       <button type="submit" style="width: 100%;" class="btn btn-primary">Confirm reservation</button>
     </form>
   </div>
