--- a/theatrebookings/templates/add_screening.html
+++ b/theatrebookings/templates/add_screening.html
@@ -11,13 +11,13 @@
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">Date</label>
           <div class="col-sm-10">
-            <input type="date" class="form-control" name="date"  placeholder="Days of presentation">
+            <input type="date" class="form-control" name="date"  placeholder="Days of presentation" required>
           </div>
         </div>
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">Starting Time</label>
           <div class="col-sm-10">
-            <input type="time" class="form-control" name="time"  placeholder="When the show starts">
+            <input type="time" class="form-control" name="time"  placeholder="When the show starts" required>
           </div>
         </div>
         <button type="submit" style="width: 100%;" class="btn btn-primary">Add screening</button>
