--- a/theatrebookings/templates/add_show.html
+++ b/theatrebookings/templates/add_show.html
@@ -11,31 +11,31 @@
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Title</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" name="name" placeholder="Title of the show">
+          <input type="text" class="form-control" name="name" placeholder="Title of the show" required>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Description</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" name="description"  placeholder="Describe the show">
+          <input type="text" class="form-control" name="description"  placeholder="Describe the show" required>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Image</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" name="img"  placeholder="Link to the image">
+          <input type="text" class="form-control" name="img"  placeholder="Link to the image" required>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Genre</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" name="genre"  placeholder="Type of show">
+          <input type="text" class="form-control" name="genre"  placeholder="Type of show" required>
         </div>
       </div>
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Duration</label>
         <div class="col-sm-10">
-          <input type="number" class="form-control" name="duration"  placeholder="How long is the show">
+          <input type="number" class="form-control" name="duration"  placeholder="How long is the show" required>
         </div>
       </div>
       <button type="submit" style="width: 100%;" class="btn btn-primary">Add show</button>
