--- a/theatrebookings/templates/edit_reservation.html
+++ b/theatrebookings/templates/edit_reservation.html
@@ -23,7 +23,7 @@
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">New seat</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" name="seat_number"  placeholder="New seat position">
+              <input type="text" class="form-control" name="seat_number"  placeholder="New seat position" required>
             </div>
         </div>
         <button type="submit" style="width: 100%;" class="btn btn-primary">Update reservation</button>
