--- a/theatrebookings/templates/login.html
+++ b/theatrebookings/templates/login.html
@@ -16,13 +16,13 @@
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control" name="name" id="name" placeholder="Your name">
+          <input type="text" class="form-control" name="name" id="name" placeholder="Your name" required>
         </div>
       </div>
       <div class="form-group row">
           <label class="col-sm-2 col-form-label">Email address</label>
           <div class="col-sm-10">
-            <input type="email" class="form-control" name="email" placeholder="Enter email">
+            <input type="email" class="form-control" name="email" placeholder="Enter email" required>
           </div>
         </div>
       <button type="submit" style="width: 100%;" class="btn btn-primary">Login</button>
