--- a/theatrebookings/templates/search.html
+++ b/theatrebookings/templates/search.html
@@ -6,7 +6,7 @@
 {% block body %}
 {% if results == []%}
   <div class="alert alert-warning" role="alert">
-    We don't have what you are looking for :/
+    Sorry, We don't have what you are looking for
   </div>
 {% else %}
     <div class="alert alert-success" role="alert">
