Add admin authentication

--- a/theatrebookings/templates/sales.html
+++ b/theatrebookings/templates/sales.html
@@ -71,9 +71,9 @@
               </tr>
               <tr>
                 <th scope="row">Value</th>
-                <td>{{ data["normal_value"] }}</td>
-                <td>{{ data["vip_value"] }}</td>
-                <td>{{ data["normal_value"]+data["vip_value"] }}</td>
+                <td>{{ data["normal_value"] }}0€</td>
+                <td>{{ data["vip_value"] }}0€</td>
+                <td>{{ data["normal_value"]+data["vip_value"] }}0€</td>
               </tr>
             </tbody>
           </table>
