--- a/theatrebookings/templates/base.html
+++ b/theatrebookings/templates/base.html
@@ -23,13 +23,6 @@
               <a class="nav-link" href="/reservations">Reservations</a>
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="/shows/add">Add show</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="/admin/sales">Sales</a>
-            </li>
           </ul>
           <ul class="navbar-nav ml-auto">
             <form class="form-inline my-2 my-lg-0" action="/search" method="POST">
@@ -37,6 +30,15 @@
               <button type="submit"class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
             </form>
             {% if user!= None %}
+            {% if user.name == "Admin" %}
+            <li class="nav-item">
+              <a class="nav-link" href="/shows/add">Add show</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/sales">Sales</a>
+            </li>
+            {% endif %}
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout {{ user.name }}</a>
             </li>
