--- a/theatrebookings/templates/edit_reservation.html
+++ b/theatrebookings/templates/edit_reservation.html
@@ -93,6 +93,23 @@
         {% endfor%}
     </tr>
     {% endfor %}
+    <tr>
+      <td style="color: white;">
+      --
+      </td>
+    </tr>
+    <tr>
+      {%for j in range(1, 20)%}
+        {% if j in [1,2,3]%}
+        <td style="color:white">
+          --
+        </td>
+        {%else%}
+        <td style="border: 1px solid; border-color: darkred; background-color: darkred; height: 100px;">
+        </td>
+      {% endif %}
+      {%endfor%}
+    </tr>
 </table>
 
 {% endblock %}
